--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="wrap">
 					<img id="profile-img" src="images/profile.png" class="online"
 						alt="" />
-					<p>Rajat Tripathi</p>
+					<p>Arjun Shah</p>
 					<div id="status-options">
 						<ul>
 							<li id="status-online" class="active"><span
@@ -58,7 +58,7 @@
 							<span class="contact-status"></span> <img
 								src="images/profile.png" alt="" />
 							<div class="meta">
-								<p class="name">Team Mate</p>
+								<p class="name">Nagarpalika</p>
 								<!-- <p class="preview">Mike, this isn't over.</p> -->
 							</div>
 						</div>
@@ -68,7 +68,7 @@
 							<span class="contact-status"></span> <img
 								src="images/profile.png" alt="" />
 							<div class="meta">
-								<p class="name">Team Mate</p>
+								<p class="name">Kamlesh</p>
 								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
 							</div>
 						</div>
