--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</div>
 				&nbsp
 				<ul>
-						<div></div>
+						<div id="nthng"></div>
 					<li class="contact">
 						<div class="wrap">
 							<span class="contact-status"></span> <img
