--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body id="mainBody">
 	<div id="frame">
 		<div id="sidepanel">
-			<div id="profile">
+			<div id="profile"><div></div>
 				<div class="wrap">
 					<img id="profile-img" src="images/profile.png" class="online"
 						alt="" />
