--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="wrap">
 					<img id="profile-img" src="images/profile.png" class="online"
 						alt="" />
-					<p>Arjun Shah</p>
+					<p>Deeksha Agrawal</p>
 					<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
 					<div id="status-options">
 						<ul>
