--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					</div>
 					<div id="expanded">
 						<ul>
-							<li>Name : Arjun Shah</li>
-							<li>Email : arjunshah248@gmail.com</li>
+							<li>Name : Rohan Adhyapak</li>
+							<li>Email : radh@gmail.com</li>
 							<li>Phone : 1234567890</li>
 							<a id="logout-button"><li><i class="fa fa-sign-out"
 									aria-hidden="true"></i> Logout</li></a>
@@ -65,7 +65,7 @@
 							<span class="contact-status"></span> <img
 								src="images/profile.png" alt="" />
 							<div class="meta">
-								<p class="name">Nagarpalika</p>
+								<p class="name">Utkarsh Gaumat</p>
 								<!-- <p class="preview">Mike, this isn't over.</p> -->
 							</div>
 						</div>
@@ -75,7 +75,47 @@
 							<span class="contact-status"></span> <img
 								src="images/profile.png" alt="" />
 							<div class="meta">
-								<p class="name">Kamlesh</p>
+								<p class="name">Arjun Shah</p>
+								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<span class="contact-status"></span> <img
+								src="images/profile.png" alt="" />
+							<div class="meta">
+								<p class="name">Rachna Saluja</p>
+								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<span class="contact-status"></span> <img
+								src="images/profile.png" alt="" />
+							<div class="meta">
+								<p class="name">Deeksha Agrawal</p>
+								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<span class="contact-status"></span> <img
+								src="images/profile.png" alt="" />
+							<div class="meta">
+								<p class="name">Rajat Tripathi</p>
+								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
+							</div>
+						</div>
+					</li>
+					<li class="contact">
+						<div class="wrap">
+							<span class="contact-status"></span> <img
+								src="images/profile.png" alt="" />
+							<div class="meta">
+								<p class="name">Riya Tilwani</p>
 								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
 							</div>
 						</div>
@@ -102,8 +142,8 @@
 		</div>
 		<div class="content">
 			<div class="contact-profile">
-				<img src="images/profile.png" alt="" />
-				<p>Team Mate</p>
+					<img src="images/profile.png" alt=""  onclick="showProfile()"/>
+					<p>Utkarsh Gaumat</p>
 			</div>
 			<div class="messages">
 				<ul>
@@ -122,5 +162,8 @@
 	</div>
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
 	<script src='js/main.js'></script>
+	<script>
+		
+	</script>
 </body>
 </html>
