--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<div class="content">
 			<div class="contact-profile">
 				<img src="images/profile.png" alt="" />
-				<p>Team Mate</p>
+				<p>Nagarpalika</p>
 			</div>
 			<div class="messages">
 				<ul>
