Fixed Starred Message button

--- a/index.html
+++ b/index.html
@@ -1,140 +1,139 @@
-
 <!DOCTYPE html>
 <html class=''>
+
 <head>
-<meta charset='UTF-8'>
-<meta name="robots" content="noindex">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylsheet" href='css/bootstrap.min.css'>
-<link href='css/fonts.css' rel='stylesheet' type='text/css'>
-<link href = "css/materialize.css" rel='stylesheet'>
-<link rel='stylesheet prefetch' href='css/reset.min.css'>
-<link rel='stylesheet prefetch'
-	href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
-<link rel='stylesheet' href='css/chatStyle.css'>
+    <meta charset='UTF-8'>
+    <meta name="robots" content="noindex">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylsheet" href='css/bootstrap.min.css'>
+    <link href='css/fonts.css' rel='stylesheet' type='text/css'>
+    <link href="css/materialize.css" rel='stylesheet'>
+    <link rel='stylesheet prefetch' href='css/reset.min.css'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='css/chatStyle.css'>
 </head>
+
 <body id="mainBody">
-	<div id="frame">
-		<div id="sidepanel">
-			<div id="profile">
-				<div class="wrap">
-					<img id="profile-img" src="images/profile.png" class="online"
-						alt="" />
-					<p>Arjun Shah</p>
-					<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
-					<div id="status-options">
-						<ul>
-							<li id="status-online" class="active"><span
-								class="status-circle"></span>
-								<p>Online</p></li>
-							<li id="status-away"><span class="status-circle"></span>
-								<p>Away</p></li>
-							<li id="status-busy"><span class="status-circle"></span>
-								<p>Busy</p></li>
-							<li id="status-offline"><span class="status-circle"></span>
-								<p>Offline</p></li>
-							<li onclick="logout()" id="logout"><i id="logout-button" class="fa fa-sign-out" aria-hidden="true"></i></span><p>Logout</p></li>
-						</ul>
-					</div>
-					<div id="expanded">
-						<ul>
-							<li>Name : Arjun Shah</li>
-							<li>Email : arjunshah248@gmail.com</li>
-							<li>Phone : 1234567890</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div id="search">
-				<label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
-				<input type="text" style="width:100%" class="browser-default" placeholder="Search contacts..." />
-			</div>
-			<div id="contacts">
-				&nbsp
-				<div class="wrap">
-					<div align="left" class="meta">
-						&nbsp&nbsp&nbsp<i class="fa fa-star" aria-hidden="true"></i>&nbsp&nbspStarred
-						Messages
-					</div>
-				</div>
-				&nbsp
-				<ul>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Nagarpalika</p>
-								<!-- <p class="preview">Mike, this isn't over.</p> -->
-							</div>
-						</div>
-					</li>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Kamlesh</p>
-								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div id="bottom-bar">
-				<button id="addcontact">
+    <div id="frame">
+        <div id="sidepanel">
+            <div id="profile">
+                <div class="wrap">
+                    <img id="profile-img" src="images/profile.png" class="online" alt="" />
+                    <p>Arjun Shah</p>
+                    <i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
+                    <div id="status-options">
+                        <ul>
+                            <li id="status-online" class="active"><span class="status-circle"></span>
+                                <p>Online</p>
+                            </li>
+                            <li id="status-away"><span class="status-circle"></span>
+                                <p>Away</p>
+                            </li>
+                            <li id="status-busy"><span class="status-circle"></span>
+                                <p>Busy</p>
+                            </li>
+                            <li id="status-offline"><span class="status-circle"></span>
+                                <p>Offline</p>
+                            </li>
+                            <li onclick="logout()" id="logout"><i id="logout-button" class="fa fa-sign-out" aria-hidden="true"></i></span>
+                                <p>Logout</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="expanded">
+                        <ul>
+                            <li>Name : Arjun Shah</li>
+                            <li>Email : arjunshah248@gmail.com</li>
+                            <li>Phone : 1234567890</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="wrap">
+                <div align="left" class="starred">
+                    &nbsp&nbsp&nbsp<i style='color:gold' class="fa fa-star" aria-hidden="true"></i><span>&nbsp&nbspStarred Messages</span>
+                </div>
+            </div>
+            <div id="search">
+                <label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
+                <input type="text" style="width:100%" class="browser-default" placeholder="Search contacts..." />
+            </div>
+            <div id="contacts">
+                <ul>
+                    <li class="contact">
+                        <div class="wrap">
+                            <span class="contact-status"></span> <img src="images/profile.png" alt="" />
+                            <div class="meta">
+                                <p class="name">Nagarpalika</p>
+                                <!-- <p class="preview">Mike, this isn't over.</p> -->
+                            </div>
+                        </div>
+                    </li>
+                    <li class="contact">
+                        <div class="wrap">
+                            <span class="contact-status"></span> <img src="images/profile.png" alt="" />
+                            <div class="meta">
+                                <p class="name">Kamlesh</p>
+                                <!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div id="bottom-bar">
+                <button id="addcontact">
 					<i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add
 						contact</span>
 				</button>
-				<button id="settings">
+                <button id="settings">
 					<i class="fa fa-bell" aria-hidden="true"></i> <span>Reminder</span>
 				</button>
-				<button id="addGroup">
+                <button id="addGroup">
 					<i class="fa fa-users" aria-hidden="true"></i><span>Create
 						Group</span>
 				</button>
-				<button id="addPoll">
+                <button id="addPoll">
 					<i class="fa fa-bar-chart" aria-hidden="true"></i><span>Create
 						Poll</span>
 				</button>
-			</div>
-		</div>
-		<div  id="cprof" style="position:absolute;z-index:-1" class="content">
-			<div class="card" id="pcard">
-				<div class="card-image">
-				  
-				  <span class="card-title">Card Title</span>
-				</div>
-				<div class="card-content">
-				  <p>I am a very simple card. I am good at containing small bits of information.
-				  I am convenient because I require little markup to use effectively.</p>
-				</div>
-				<div class="card-action">
-				  <input type="button" value="Go Back" onclick="backHome()">
-				</div>
-			</div>
-		</div>
-		<div id="chat" class="content" style="z-index:1">
-			<div class="contact-profile">
-				<img src="images/profile.png" onclick="showContactProfile()" alt="" />
-				<p>Team Mate</p>
-			</div>
-			<div class="messages">
-				<ul>
-				
-				</ul>
-			</div>
-			<div class="message-input">
-				<div class="wrap" style="display:flex">
-					<input id='chatBox' type="text" class="browser-default" style ="width:100%" placeholder="Write your message..." />
-					<button class="submit" id="sb" onClick='sendChat()'>
+            </div>
+        </div>
+        <div id="cprof" style="position:absolute;z-index:-1" class="content">
+            <div class="card" id="pcard">
+                <div class="card-image">
+
+                    <span class="card-title">Card Title</span>
+                </div>
+                <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                </div>
+                <div class="card-action">
+                    <input type="button" value="Go Back" onclick="backHome()">
+                </div>
+            </div>
+        </div>
+        <div id="chat" class="content" style="z-index:1">
+            <div class="contact-profile">
+                <img src="images/profile.png" onclick="showContactProfile()" alt="" />
+                <p>Team Mate</p>
+            </div>
+            <div class="messages">
+                <ul>
+
+                </ul>
+            </div>
+            <div class="message-input">
+                <div class="wrap" style="display:flex">
+                    <input id='chatBox' type="text" class="browser-default" style="width:100%" placeholder="Write your message..." />
+                    <button class="submit" id="sb" onClick='sendChat()'>
 						<i class="fa fa-paper-plane" aria-hidden="true"></i>
 					</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<script src='js/plugins/jquery-2.2.4.min.js'></script>
-	<script src='js/main.js'></script>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src='js/plugins/jquery-2.2.4.min.js'></script>
+    <script src='js/main.js'></script>
 </body>
+
 </html>
