--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylsheet" href='css/bootstrap.min.css'>
 <link href='css/fonts.css' rel='stylesheet' type='text/css'>
+<link href = "css/materialize.css" rel='stylesheet'>
 <link rel='stylesheet prefetch' href='css/reset.min.css'>
 <link rel='stylesheet prefetch'
 	href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
 <link rel='stylesheet' href='css/chatStyle.css'>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel='stylesheet' href='css/style.css'>
+<style>
+
+</style>
+
 </head>
 <body id="mainBody">
 	<div id="frame">
@@ -19,7 +26,8 @@
 				<div class="wrap">
 					<img id="profile-img" src="images/profile.png" class="online"
 						alt="" />
-					<p>Arjun Shah</p><div></div>
+					<p>Arjun Shah</p>
+                                        <div></div>
 					<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
 					<div id="status-options">
 						<ul>
@@ -36,8 +44,8 @@
 					</div>
 					<div id="expanded">
 						<ul>
-							<li>Name : Rohan Adhyapak</li>
-							<li>Email : radh@gmail.com</li>
+							<li>Name : Arjun Shah</li>
+							<li>Email : arjunshah248@gmail.com</li>
 							<li>Phone : 1234567890</li>
 							<a id="logout-button"><li><i class="fa fa-sign-out"
 									aria-hidden="true"></i> Logout</li></a>
@@ -47,7 +55,7 @@
 			</div>
 			<div id="search">
 				<label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
-				<input type="text" placeholder="Search contacts..." />
+				<input type="text" style="width:100%" class="browser-default" placeholder="Search contacts..." />
 			</div>
 			<div id="contacts">
 				&nbsp
@@ -59,13 +67,12 @@
 				</div>
 				&nbsp
 				<ul>
-
 					<li class="contact">
 						<div class="wrap">
 							<span class="contact-status"></span> <img
 								src="images/profile.png" alt="" />
 							<div class="meta">
-								<p class="name">Utkarsh Gaumat</p>
+								<p class="name">Nagarpalika</p>
 								<!-- <p class="preview">Mike, this isn't over.</p> -->
 							</div>
 						</div>
@@ -75,47 +82,7 @@
 							<span class="contact-status"></span> <img
 								src="images/profile.png" alt="" />
 							<div class="meta">
-								<p class="name">Arjun Shah</p>
-								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
-							</div>
-						</div>
-					</li>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Rachna Saluja</p>
-								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
-							</div>
-						</div>
-					</li>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Deeksha Agrawal</p>
-								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
-							</div>
-						</div>
-					</li>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Rajat Tripathi</p>
-								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
-							</div>
-						</div>
-					</li>
-					<li class="contact">
-						<div class="wrap">
-							<span class="contact-status"></span> <img
-								src="images/profile.png" alt="" />
-							<div class="meta">
-								<p class="name">Riya Tilwani</p>
+								<p class="name">Kamlesh</p>
 								<!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
 							</div>
 						</div>
@@ -140,10 +107,42 @@
 				</button>
 			</div>
 		</div>
-		<div class="content">
+		<div  id="cprof" style="position:absolute;z-index:-1" class="content ">
+			<div class="card " id="pcard">
+			  
+			  		<div id="wrappie">
+
+			  			<!-- Exit button -->
+			  			<div class="exit-card">
+						  <a class="btn-flat" style="float:right;margin-right:10px;" onclick="backHome()"><i class="material-icons">close</i></a>
+						</div> 
+
+			  			<!-- Card Profile image -->	
+					    <div class="card-image">
+		                  <img src="images/profile.png" class="display-pic">
+		                </div>
+
+			              <!-- Card Profile content -->
+			              <div class="card-content">
+			          		  <div id="userName">
+			          		  	<p>Rohan Adhyapak</p>	
+			          		  </div>
+			                  <div id="userEmail">
+			                    <p class="cardLabel">Email</p>
+			                    <p>rohan.adhyapak@gmail.com</p>
+			                  </div>
+			                  <div id="userPhone">
+			                    <p class="cardLabel">Phone No.</p>
+			                    <p>9676433245</p>
+			                  </div>
+			              </div>
+					</div>
+			</div>
+		</div>
+		<div id="chat" class="content" style="z-index:1">
 			<div class="contact-profile">
-					<img src="images/profile.png" alt=""  onclick="showProfile()"/>
-					<p>Utkarsh Gaumat</p>
+				<img src="images/profile.png" onclick="showContactProfile()" alt="" />
+				<p>Team Mate</p>
 			</div>
 			<div class="messages">
 				<ul>
@@ -151,8 +150,8 @@
 				</ul>
 			</div>
 			<div class="message-input">
-				<div class="wrap">
-					<input id='chatBox' type="text" placeholder="Write your message..." />
+				<div class="wrap" style="display:flex">
+					<input id='chatBox' type="text" class="browser-default" style ="width:100%" placeholder="Write your message..." />
 					<button class="submit" id="sb" onClick='sendChat()'>
 						<i class="fa fa-paper-plane" aria-hidden="true"></i>
 					</button>
@@ -162,8 +161,5 @@
 	</div>
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
 	<script src='js/main.js'></script>
-	<script>
-		
-	</script>
 </body>
 </html>
