--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			</div>
 			<div id="bottom-bar">
 				<button id="addcontact">
-					<i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add
+					<i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Addd
 						contact</span>
 				</button>
 				<button id="settings">
