removed profile line

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				<img src="images/profile.png" onclick="showContactProfile()" alt="" />
 				<p>Team Mate</p>
 			</div>
-			<div class="messages">
+			<div id="messages" class="messages">
 				<ul>
 
 				</ul>
