username changed of profile

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<!-- Card Profile content -->
 					<div class="card-content">
 						<div id="userName">
-							<p>Rohan Adhyapak</p>
+							<p>userName</p>
 						</div>
 						<div id="userEmail">
 							<p class="cardLabel">Email</p>
