--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						</div>
 						<div id="userEmail">
 							<p class="cardLabel">Email</p>
-							<p>rohan.adhyapak@gmail.com</p>
+							<p>kamlesh@gmail.com</p>
 						</div>
 						<div id="userPhone">
 							<p class="cardLabel">Phone No.</p>
@@ -153,7 +153,7 @@
 		</div>
 		<div id="chat" class="content" style="z-index: 1">
 			<div class="contact-profile">
-				<img src="images/profile.png" onclick="showContactProfile()" alt="" />
+				<img src="images/profile.png" alt="" />
 				<p>Team Mate</p>
 			</div>
 			<div id="messages" class="messages">
