--- a/index.html
+++ b/index.html
@@ -201,16 +201,14 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
+				<a href="#!" style="background:#32465a;color:white;" class="modal-action modal-close btn-flat">Close</a>
 			</div>
 		</div>
 	</div>
 	<div id="addContactModal" class="modal">
 		<div class="modal-content">
 			<input type="text" id="searchText"
-				placeholder="Search by name, e-mail id" /> <a
-				class="waves-effect waves-light btn" onclick="searchContact()"><i
-				class="material-icons left">search</i>Search</a>
+				placeholder="Search by name, e-mail id" />
 			<div id="searchContactResult">
 				<ul id="searchContactResultList">
 				</ul>
@@ -218,8 +216,8 @@
 
 		</div>
 		<div class="modal-footer">
-			<a href="#!"
-				class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+			<a href="#!" style="background:#32465a;color:white;"
+				class="modal-action modal-close btn-flat">Close</a>
 		</div>
 	</div>
 	<script src='js/plugins/jquery-2.2.4.min.js'></script>
