ids added to profile card

--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
 					<!-- Card Profile content -->
 					<div class="card-content">
 						<div id="userName">
-							<p>userName</p>
+							<p id="userNameValue">userName</p>
 						</div>
 						<div id="userEmail">
 							<p class="cardLabel">Email</p>
-							<p>kamlesh@gmail.com</p>
+							<p id="userEmailValue">kamlesh@gmail.com</p>
 						</div>
 						<div id="userPhone">
 							<p class="cardLabel">Phone No.</p>
-							<p>9676433245</p>
+							<p id="userPhoneValue">9676433245</p>
 						</div>
 					</div>
 				</div>
