--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 
 			<div class="wrap">
 				<div align="left" class="starred">
+					&nbsp&nbsp&nbsp<i class="fa fa-user" aria-hidden="true"></i><span>&nbsp&nbsp Profile</span>
+				</div>
+			</div>
+
+			<div class="wrap">
+				<div align="left" class="starred">
 					&nbsp&nbsp&nbsp<i style="color: gold;" class="fa fa-star" aria-hidden="true"></i><span>&nbsp&nbspStarred Messages</span>
 				</div>
 			</div>
