--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 			</div>
 
 			<div class="wrap">
-				<div align="left" class="starred">
-					&nbsp&nbsp&nbsp<i class="fa fa-user" aria-hidden="true"></i><span>&nbsp&nbsp Profile</span>
+				<div align="left" class="starred"><!-- class name kept same with starred, may need to change -->
+					&nbsp&nbsp&nbsp<i class="fa fa-user" aria-hidden="true"></i><span>&nbsp&nbspMy Profile</span>
 				</div>
 			</div>
 
