exit profile button fixed, aligned to left

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 					<!-- Exit button -->
 					<div class="exit-card">
-						<a class="btn-flat" style="float: right; margin-right: 10px;"
+						<a class="btn-flat"
 							onclick="backHome()"><i class="material-icons">close</i></a>
 					</div>
 
