unknown changes after pull

--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
 <!--Import Google Icon Font-->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
-<!--Import materialize.css-->
-<link type="text/css" rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"
-	media="screen,projection" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
+
 </head>
 <body id="mainBody">
 	<div id="frame">
@@ -54,9 +49,9 @@
 					</div>
 					<div id="expanded">
 						<ul>
-							<li>Name : Arjun Shah</li>
-							<li>Email : arjunshah248@gmail.com</li>
-							<li>Phone : 1234567890</li>
+							<li></li>
+							<li></li>
+							<li></li>
 						</ul>
 					</div>
 				</div>
@@ -159,8 +154,12 @@
 		</div>
 		<div id="chat" class="content" style="z-index: 1">
 			<div class="contact-profile">
-				<img src="images/profile.png" alt="" />
-				<p>Team Mate</p>
+
+				<img src="images/profile.png" onclick="showContactProfile()" alt="" />
+				<p></p>
+
+				
+
 			</div>
 			<div id="messages" class="messages">
 				<ul>
